# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2006-02-02 13:15:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-159

    Summary:
      cms, fix user profile template (it is a content template)
    Revision:
      itools--main--0.12--patch-159


    modified files:
     Changelog cms/ui/User_profile.xml.en


2006-01-31 15:29:20 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-158

    Summary:
      web.server, catch exceptions in the commit phase
    Revision:
      itools--main--0.12--patch-158

    Instead of failing silently.

    modified files:
     Changelog web/server.py


2006-01-25 17:08:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-157

    Summary:
      csv, trying to work-around the Python's crappy csv parser
    Revision:
      itools--main--0.12--patch-157


    modified files:
     Changelog csv/itools_csv.py


2006-01-25 16:42:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-156

    Summary:
      resources, add comment to signal a change to be made to the API
    Revision:
      itools--main--0.12--patch-156


    modified files:
     Changelog resources/base.py


2006-01-24 13:12:41 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-155

    Summary:
      merge "class diagram" tool from luis (#219), not finished
    Revision:
      itools--main--0.12--patch-155

    Patches applied:
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.12--patch-56
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-1
       merge classDiagram work form itools--luis--0.10
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-2
       clean import in test_python.py
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-3
       refactor get_visitor in python.py
    
     * luis@itaapy.com--private/itools--classDiagram--0.12--patch-4