@@ -121,26 +121,33 @@ def handle_request(connection, server):
             method = root.not_found
         else:
             # Get the method
-            method = handler.get_method(method_name)
-            # Check security
-            if method is None:
-                if user is None:
-                    # Unauthorized (401)
-                    method = root.login_form
-                else:
-                    # Forbidden (403)
-                    method = root.forbidden
+            try:
+                method = handler.get_method(method_name)
+            except:
+                server.log_error()
+                # Internal Server Error (500)
+                response.set_status(500)
+                method = root.internal_server_error
             else:
-                mtime = getattr(handler, '%s__mtime__' % method_name, None)
-                if mtime is not None:
-                    mtime = mtime().replace(microsecond=0)
-                    response.set_header('last-modified', mtime)
-                    if request.method == 'GET':
-                        if request.has_header('if-modified-since'):
-                            msince = request.get_header('if-modified-since')
-                            if mtime <= msince:
-                                # Not modified (304)
-                                response.set_status(304)
+                # Check security
+                if method is None:
+                    if user is None:
+                        # Unauthorized (401)
+                        method = root.login_form
+                    else:
+                        # Forbidden (403)
+                        method = root.forbidden
+                else:
+                    mtime = getattr(handler, '%s__mtime__' % method_name, None)
+                    if mtime is not None:
+                        mtime = mtime().replace(microsecond=0)
+                        response.set_header('last-modified', mtime)
+                        if request.method == 'GET':
+                            if request.has_header('if-modified-since'):
+                                msince = request.get_header('if-modified-since')
+                                if mtime <= msince:
+                                    # Not modified (304)
+                                    response.set_status(304)
 
     if response.get_status() != 304:
         # Set the list of needed resources. The method we are going to
