@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2006-02-02 14:19:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-160
+
+    Summary:
+      web.server, catch exceptions in the "get_method" block
+    Revision:
+      itools--main--0.12--patch-160
+
+
+    modified files:
+     Changelog web/server.py
+
+
 2006-02-02 13:15:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-159
 
     Summary:
